--- a/picuzzle/Base.lproj/Main.storyboard
+++ b/picuzzle/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lav-yH-L9i">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="8RI-8I-dJe">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -380,6 +380,69 @@
             </objects>
             <point key="canvasLocation" x="-2894" y="36"/>
         </scene>
+        <!--Login View Controller-->
+        <scene sceneID="xSd-1q-FFh">
+            <objects>
+                <viewController id="8RI-8I-dJe" customClass="LoginViewController" customModule="picuzzle" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="23F-p8-FPp"/>
+                        <viewControllerLayoutGuide type="bottom" id="9Xj-rk-Gkf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8xE-Nz-mQy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" alpha="0.85000002384185791" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQo-bS-Fwd">
+                                <rect key="frame" x="16" y="313" width="343" height="40"/>
+                                <color key="backgroundColor" red="0.89869350189999997" green="0.4189298749" blue="0.1870625615" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="fGF-Vd-zNI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="VCROSDMono" family="VCR OSD Mono" pointSize="25"/>
+                                <inset key="titleEdgeInsets" minX="-25" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="-51" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="LOGIN" image="FB-f-Logo__white_29">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="5"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="loginBtnPressed:" destination="8RI-8I-dJe" eventType="touchUpInside" id="0aF-l5-PWB"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fBQ-dl-mr0">
+                                <rect key="frame" x="16" y="394" width="343" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="background.png" translatesAutoresizingMaskIntoConstraints="NO" id="mAf-g1-NOR">
+                                <rect key="frame" x="0.0" y="10" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mAf-g1-NOR" firstAttribute="leading" secondItem="8xE-Nz-mQy" secondAttribute="leadingMargin" constant="-16" id="18e-Tz-stU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="mAf-g1-NOR" secondAttribute="trailing" constant="-16" id="CBO-38-dfF"/>
+                            <constraint firstItem="zQo-bS-Fwd" firstAttribute="leading" secondItem="8xE-Nz-mQy" secondAttribute="leadingMargin" id="DHp-gg-Iq5"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zQo-bS-Fwd" secondAttribute="trailing" id="MSK-Bu-3Pd"/>
+                            <constraint firstItem="zQo-bS-Fwd" firstAttribute="centerY" secondItem="8xE-Nz-mQy" secondAttribute="centerY" id="UWb-5H-nLt"/>
+                            <constraint firstItem="9Xj-rk-Gkf" firstAttribute="top" secondItem="mAf-g1-NOR" secondAttribute="bottom" id="cY1-aY-VdM"/>
+                            <constraint firstItem="zQo-bS-Fwd" firstAttribute="centerX" secondItem="8xE-Nz-mQy" secondAttribute="centerX" id="lC6-2D-g94"/>
+                            <constraint firstItem="mAf-g1-NOR" firstAttribute="top" secondItem="23F-p8-FPp" secondAttribute="bottom" constant="-20" id="t4W-TQ-ugs"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="loginBtn" destination="zQo-bS-Fwd" id="kAd-b4-Kko"/>
+                        <outlet property="test" destination="fBQ-dl-mr0" id="zrl-8H-4ub"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yGa-bq-DMe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3695.1999999999998" y="35.532233883058474"/>
+        </scene>
         <!--Index View Controller-->
         <scene sceneID="Q8K-tS-Vxx">
             <objects>
@@ -467,6 +530,22 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" alpha="0.85000002384185791" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J97-SU-9ZD">
+                                <rect key="frame" x="24" y="101" width="335" height="40"/>
+                                <color key="backgroundColor" red="0.89869350189999997" green="0.4189298749" blue="0.1870625615" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="5hx-hb-xEk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="VCROSDMono" family="VCR OSD Mono" pointSize="25"/>
+                                <inset key="titleEdgeInsets" minX="-25" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="-51" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="LOGIN" image="FB-f-Logo__white_29">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="5"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.85882352939999995" blue="0.48627450979999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -771,7 +850,7 @@
                                 </subviews>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="winner-medal.png" translatesAutoresizingMaskIntoConstraints="NO" id="JPM-qr-S1W">
-                                <rect key="frame" x="62" y="251.5" width="250" height="100"/>
+                                <rect key="frame" x="62" y="252" width="250" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="cmC-4C-d8B"/>
                                     <constraint firstAttribute="width" constant="250" id="zSm-ox-gJ9"/>
@@ -855,7 +934,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="FB-f-Logo__white_29" width="29" height="29"/>
         <image name="TA-gold-medal.png" width="537" height="553"/>
+        <image name="background.png" width="3125" height="5558"/>
         <image name="clock-badge.png" width="308" height="308"/>
         <image name="multiplayer-badge.png" width="313" height="313"/>
         <image name="sword-badge.png" width="308" height="308"/>
