--- a/picuzzle/Base.lproj/Main.storyboard
+++ b/picuzzle/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lav-yH-L9i">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lav-yH-L9i">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -399,7 +399,7 @@
         <!--Index View Controller-->
         <scene sceneID="Q8K-tS-Vxx">
             <objects>
-                <viewController id="0t4-mT-HD8" customClass="IndexViewController" customModule="picuzzle" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="IndexViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0t4-mT-HD8" customClass="IndexViewController" customModule="picuzzle" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="SCu-RK-Vk9"/>
                         <viewControllerLayoutGuide type="bottom" id="7QA-s1-5gd"/>
@@ -857,7 +857,7 @@
                                 </subviews>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="winner-medal.png" translatesAutoresizingMaskIntoConstraints="NO" id="JPM-qr-S1W">
-                                <rect key="frame" x="62" y="251.5" width="250" height="100"/>
+                                <rect key="frame" x="62" y="252" width="250" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="cmC-4C-d8B"/>
                                     <constraint firstAttribute="width" constant="250" id="zSm-ox-gJ9"/>
